--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!doctype html>
-<html class="no-js" lang="">
-
+<html lang="sv">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Meal-Search</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
+<main class="app">
+  <h1>Recipe-Search</h1>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+  <form id="meal-form">
+    <label for="select">Search your favorite recipe</label>
+    <div class="dd-wrap">
+    <input id="select" type="text" placeholder="Enter a meal name..." required />
+    <div id="recipes"></div>
+    </div>
+    <button id = "submit" type="submit">Search meal</button>
+  </form>
+  <div id="results" aria-live="polite">
+  </div>
 
+
+  <footer class="footnote">
+    <small>
+      Data from https://www.themealdb.com/api.php
+    </small>
+  </footer>
+</main>
+
+<script src="js/app.js" defer></script>
 </body>
-
 </html>
+
