--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <form id="meal-form">
     <label for="select">Search your favorite recipe</label>
     <div class="dd-wrap">
-    <input id="select" type="text" placeholder="Enter a meal name..." required />
+    <input id="select" type="text" placeholder="Choose meal category..." required />
     <div id="recipes"></div>
     </div>
     <button id = "submit" type="submit">Search meal</button>
